Added favicon, added links

--- a/resume.html
+++ b/resume.html
@@ -6,6 +6,12 @@
 
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
+    <link rel="manifest" href="site.webmanifest">
+
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" type="text/css">
     <link rel="stylesheet" href="./resumecards.css" type="text/css">
     <title>Jérôme Scheefer - Computer engineer, Fullstack developer</title>
@@ -90,10 +96,11 @@
                         </p>
 
                         <p>
-                            Development of multi-protocol client software Steed, downloadable on frenchfrysoftware.com.
+                            Development of multi-protocol client software <a href="http://frenchfrysoftware.com/steed" target="_blank">Steed</a>.
                         </p>
                         <p>
-                            Design and development of Cover comic reader (4.2 stars, 1M+ downloads on Windows Store & Windows Phone).
+                            Design and development of <a href="http://frenchfrysoftware.com/cover" target="_blank">Cover</a> comic book reader (4.2 stars, 1M+ downloads on <a href="https://www.microsoft.com/en-us/p/cover-comic-reader/9wzdncrfj9w7#activetab=pivot:overviewtab"
+                                target="_blank">Windows Store</a>).
                         </p>
 
                         <p><i>C#, XAML, WPF, WinRT, UWP</i></p>
