Added french version

--- a/cv.html
+++ b/cv.html
@@ -14,11 +14,29 @@
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" type="text/css">
     <link rel="stylesheet" href="./resumecards.css" type="text/css">
-    <title>Jérôme Scheefer - Computer engineer, Fullstack developer</title>
+    <title>Jérôme Scheefer - Ingénieur en informatique, Développeur fullstack</title>
     <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
+
+    <style type="text/css">
+        .panel-body {
+            height: 420px;
+        }
+        
+        @media (max-width: 991px) and (min-width: 768px) {
+            .panel-body {
+                height: 530px;
+            }
+        }
+        
+        @media (max-width: 767px) {
+            .panel-body {
+                height: auto
+            }
+        }
+    </style>
 
 </head>
 
@@ -31,14 +49,14 @@
             <div class="col-sm-8 clearfix">
                 <div class="resume-baseinfo">
                     <h1>Jérôme Scheefer</h1>
-                    <p>I'm a fullstack developer with eleven years of experience in frontend and backend development. Mostly on Microsoft technologies but i'm interested in any other as well. I really do love C# though.</p>
+                    <p>Je suis un développeur fullstack avec onze ans d'expérience en développement frontend et backend. Je suis spécialisé sur les technos Microsoft et un grand fan de C#, mais je m'intéresse et m'adapte vite aux autres stacks.</p>
                 </div>
             </div>
             <div class="col-sm-4 resume-contact">
                 <p><i class="fa fa-home fa-lg fa-fw"></i> 5 avenue de Saint-Ouen, 75017 Paris</p>
-                <p><i class="fa fa-laptop fa-lg fa-fw"></i> <a href="http://scheefer.me/resume" target="_blank">scheefer.me/resume</a></p>
+                <p><i class="fa fa-laptop fa-lg fa-fw"></i> <a href="http://scheefer.me/cv" target="_blank">scheefer.me/cv</a></p>
                 <p><i class="fa fa-envelope-o fa-lg fa-fw"></i> <a href="mailto:jerome@scheefer.me" target="_blank">jerome@scheefer.me</a></p>
-                <p><i class="fa fa-mobile fa-lg fa-fw"></i> <a href="tel:+33617564780" target="_blank">+33 6 17 56 47 80</a></p>
+                <p><i class="fa fa-mobile fa-lg fa-fw"></i> <a href="tel:+33617564780" target="_blank">06 17 56 47 80</a></p>
 
             </div>
         </div>
@@ -47,7 +65,7 @@
             <div class="col-sm-4">
                 <div class="panel panel-default">
                     <div class="panel-heading">
-                        <h3 class="panel-title">Work Experience</h3>
+                        <h3 class="panel-title">Expérience pro</h3>
                     </div>
                     <div class="panel-body">
 
@@ -56,20 +74,20 @@
                         </h4>
 
                         <p class="resume-subheading">
-                            Fullstack developer
+                            Développeur fullstack
                         </p>
 
                         <p class="resume-duration">
-                            June 2016 - October 2019
+                            Juin 2016 - Octobre 2019
                         </p>
 
                         <p>
-                            Design and development of Frontend and Backend features. Creation of new APIs (search, mobile). Redesign of the search & reserve/subscribe workflows.
+                            Conception et développement de nouvelles fonctionnalités Frontend et Backend. Mise en place de nouvelles API. Refonte du système de recherche de dispo et de prise de résa/abo.
                         </p>
 
-                        <p>Monitoring and managing of Azure infrastructure. Improvement of the testing and CI solution.</p>
+                        <p>Gestion et évolution de l’infra Azure. Enrichissement de la solution de tests unitaires et intégration continue.</p>
 
-                        <p>Management of junior developers and (rotating) scrum master.</p>
+                        <p>Encadrement des développeurs junior et scrum master tournant.</p>
                         <p><i>C#, ASP.Net MVC, Web API, HTML, SCSS, knockoutJS, Azure, SQL Server, Jenkins</i></p>
 
                     </div>
@@ -79,7 +97,7 @@
             <div class="col-sm-4">
                 <div class="panel panel-default">
                     <div class="panel-heading">
-                        <h3 class="panel-title">Work Experience</h3>
+                        <h3 class="panel-title">Expérience pro</h3>
                     </div>
                     <div class="panel-body">
 
@@ -88,18 +106,19 @@
                         </h4>
 
                         <p class="resume-subheading">
-                            Co-founder & CTO
+                            Associé fondateur & CTO
                         </p>
 
                         <p class="resume-duration">
-                            January 2011 - Present
+                            Depuis Janvier 2011
                         </p>
 
                         <p>
-                            Development of multi-protocol client software <a href="http://frenchfrysoftware.com/steed" target="_blank">Steed</a>.
+                            Développement de l’application de transferts multi-protocoles <a href="http://frenchfrysoftware.com/steed" target="_blank">Steed</a>.
                         </p>
                         <p>
-                            Design and development of <a href="http://frenchfrysoftware.com/cover" target="_blank">Cover</a> comic book reader (4.2 stars, 1M+ downloads on <a href="https://www.microsoft.com/en-us/p/cover-comic-reader/9wzdncrfj9w7" target="_blank">Windows Store</a>).
+                            Conception et développement de l’application de lecture de BD <a href="http://frenchfrysoftware.com/cover" target="_blank">Cover</a> (4.2 étoiles, 1M+ téléchargements sur <a href="https://www.microsoft.com/fr-fr/p/cover-comic-reader/9wzdncrfj9w7"
+                                target="_blank">Windows Store</a>).
                         </p>
 
                         <p><i>C#, XAML, WPF, WinRT, UWP</i></p>
@@ -111,7 +130,7 @@
             <div class="col-sm-4">
                 <div class="panel panel-default">
                     <div class="panel-heading">
-                        <h3 class="panel-title">Work Experience</h3>
+                        <h3 class="panel-title">Expérience pro</h3>
                     </div>
                     <div class="panel-body">
 
@@ -120,18 +139,18 @@
                         </h4>
 
                         <p class="resume-subheading">
-                            Lead web developer
+                            Lead développeur web
                         </p>
 
                         <p class="resume-duration">
-                            september 2010 - June 2014
+                            September 2010 - Juin 2014
                         </p>
 
                         <p>
-                            Design and development of Web and desktop applications (tax and teledeclaration software).
+                            Conception et développement des produits Web commercialisés (fiscalité, télédéclaration). Support de niveau 2 sur les produits Web. Responsable publication et monitoring des plateformes SAAS sur Azure. Mise en place de la solution de tests de charge.
                         </p>
                         <p>
-                            Management of the web development team (1 to 3 employees or contractors).
+                            Formation et encadrement des développeurs Web (1 à 3 internes ou prestataires).
                         </p>
 
                         <p><i>ASP.Net MVC 4, WebForms, WinForms, WCF, EF 6, HTML, CSS, knockoutJS, kendoUI, jquery UI, Angular, Azure Storage, SQL Azure, SQL Server</i></p>
@@ -143,7 +162,7 @@
             <div class="col-sm-4">
                 <div class="panel panel-default">
                     <div class="panel-heading">
-                        <h3 class="panel-title">Work Experience</h3>
+                        <h3 class="panel-title">Expérience pro</h3>
                     </div>
                     <div class="panel-body">
 
@@ -152,18 +171,18 @@
                         </h4>
 
                         <p class="resume-subheading">
-                            Head of development
+                            Directeur développement
                         </p>
 
                         <p class="resume-duration">
-                            February 2006 - June 2010
+                            Février 2006 - Juin 2010
                         </p>
 
                         <p>
-                            Design and development of Web and desktop applications. Infrastructure monitoring and maintenance.
+                            Conception, encadrement et développement d’applications de gestion et de production. Maintenance et évolution des SI (ACL, WebServices, hébergement, maintien des sites, …).
                         </p>
                         <p>
-                            Administrative and technical management of the IT/dev team (2 to 6 interns, employees or contractors).
+                            Gestion administrative et technique d'une équipe de 2 à 6 personnes.
                         </p>
 
                         <p><i>ASP, ASP.Net, AJAX.ASP.Net, WebForms, WinForms, HTML, CSS, JavaScript</i></p>
@@ -175,7 +194,7 @@
             <div class="col-sm-4">
                 <div class="panel panel-default">
                     <div class="panel-heading">
-                        <h3 class="panel-title">Education</h3>
+                        <h3 class="panel-title">Formation</h3>
                     </div>
                     <div class="panel-body">
 
@@ -184,30 +203,30 @@
                         </h4>
 
                         <p class="resume-subheading">
-                            2008 - Computer science engineer
+                            2008 - Ingénieur en informatique
                         </p>
 
-                        <p>Specialty in multimedia & information technology</p>
+                        <p>Spécialité Multimédia et technologies de l'information</p>
 
                         <h4>
                             IUT de Nice
                         </h4>
 
                         <p class="resume-subheading">
-                            2005 - two-year higher education in computer science.
+                            2005 - DUT informatique
                         </p>
 
-                        <p>Specialty in software engineering</p>
+                        <p>Spécialité Génie logiciel</p>
 
                         <h4 style="margin-top: 28px;">
                             Lycée Jules Ferry, Cannes
                         </h4>
 
                         <p class="resume-subheading">
-                            2003 - Baccalaureate S
+                            2003 - Bac Scientifique
                         </p>
 
-                        <p>Specialty in Mechanics/Electronics</p>
+                        <p>Spécialité Mécanique & électronique</p>
 
                     </div>
                 </div>
@@ -216,7 +235,7 @@
             <div class="col-sm-4">
                 <div class="panel panel-default">
                     <div class="panel-heading">
-                        <h3 class="panel-title">Fullstack dev skills</h3>
+                        <h3 class="panel-title">Compétences fullstack</h3>
                     </div>
                     <div class="panel-body">
 
@@ -329,7 +348,7 @@
             <div class="col-sm-4">
                 <div class="panel panel-default">
                     <div class="panel-heading">
-                        <h3 class="panel-title">Other skills</h3>
+                        <h3 class="panel-title">Autres compétences</h3>
                     </div>
                     <div class="panel-body">
 
@@ -426,11 +445,12 @@
                         <h3 class="panel-title">Open Source</h3>
                     </div>
                     <div class="panel-body">
-                        <p>Here are some of my open source projects:</p>
+                        <p>Quelques-uns de mes projets :</p>
 
                         <ul>
-                            <li><a href="https://github.com/schouffy/bookmarks-chrome-extension" target="_blank">Bookmarks Chrome extension</a>: A tiny Chrome extension to manage bookmarks</li>
-                            <li><a href="https://github.com/schouffy/DrySafe" target="_blank">DrySafe</a>: Helps avoiding rain when you bike daily to work</li>
+                            <li><a href="https://github.com/schouffy/bookmarks-chrome-extension" target="_blank">Bookmarks Chrome extension</a>: Une petite extension Chrome pour gérer les favoris au lieu de la barre de favoris (L'objectif est de libérer de
+                                la place verticalement)</li>
+                            <li><a href="https://github.com/schouffy/DrySafe" target="_blank">DrySafe</a>: Aide à éviter de se faire saucer en vélo en allant au travail</li>
                         </ul>
 
                     </div>
@@ -440,25 +460,25 @@
             <div class="col-sm-4">
                 <div class="panel panel-default">
                     <div class="panel-heading">
-                        <h3 class="panel-title">Languages & interests</h3>
+                        <h3 class="panel-title">Langues & intérêts</h3>
                     </div>
                     <div class="panel-body">
                         <h4>
-                            English
+                            Anglais
                         </h4>
-                        <p>Fluent (TOEIC 920) with a nice french accent</p>
+                        <p>Courant (TOEIC 920) avec un bel accent français</p>
 
                         <h4>
-                            German
+                            Allemand
                         </h4>
-                        <p>Some scholar knowledge from 6 years long classes</p>
+                        <p>Connaissances scolaires après 6 ans d'étude</p>
 
                         <h4>
-                            What drives me
+                            J'aime quoi ?
                         </h4>
-                        <p>Video games (Dark Souls, Stalker, Hotline Miami,...) and game dev (Released a mobile game named <a href="https://schouffy.itch.io/jumpy-deer" target="_blank">Jumpy Deer</a>, took part in a few <a href="https://schouffy.itch.io"
+                        <p>Les jeux vidéo (Dark Souls, Stalker, Hotline Miami,...) et le game dev (Créé un jeu mobile, <a href="https://schouffy.itch.io/jumpy-deer" target="_blank">Jumpy Deer</a>, et participé à plusieurs <a href="https://schouffy.itch.io"
                                 target="_blank">game jams</a>)</p>
-                        <p>Cinema (LOVE Nolan and Tarantino), comic books (Garth Ennis FTW), sports, hiking, trips (Ireland, Mexico, Iceland, Sri Lanka, Scotland, California, Hawaï, ...)</p>
+                        <p>Le cinéma (J'ADORE Nolan et Tarantino), Les BD (Garth Ennis FTW), le sport, la rando, voyager (Irlande, Mexique, Islande, Sri Lanka, Ecosse, Californie, Hawaï,...)</p>
                     </div>
                 </div>
             </div>
@@ -467,7 +487,7 @@
 
         <nav class="navbar navbar-default hidden-print" role="navigation">
             <div class="resume-nav">
-                <span>Based on <a href="https://github.com/ellekasai/resumecards" target="_blank">ResumeCards</a><span class="hidden-sm"></span></span> | <a href="./cv">🇫🇷 En Français</a> | <a href="./resume-scheefer.pdf">Download PDF</a>
+                <span>Basé sur <a href="https://github.com/ellekasai/resumecards" target="_blank">ResumeCards</a><span class="hidden-sm"></span></span> | <a href="./resume">🇬🇧 In English</a> | <a href="./cv-scheefer.pdf">Télécharger en PDF</a>
             </div>
         </nav>
 
