Updated resumes for game development

--- a/cv.html
+++ b/cv.html
@@ -49,18 +49,48 @@
             <div class="col-sm-8 clearfix">
                 <div class="resume-baseinfo">
                     <h1>Jérôme Scheefer</h1>
-                    <p>Je suis un développeur fullstack avec onze ans d'expérience en développement frontend et backend. Je suis spécialisé sur les technos Microsoft et un grand fan de C#, mais je m'intéresse et m'adapte vite aux autres stacks.</p>
+                    <p>Je suis un développeur fullstack avec onze ans d'expérience en développement frontend et backend. <br/>Je suis également passionné de gamedev et recherche actuellement un poste de programmeur gameplay. Voir mon portfolio sur <a href="https://schouffy.itch.io" target="_blank">itch.io</a> et <a href="https://thegamedevquest.tumblr.com" target="_blank">Tumblr</a></p>
                 </div>
             </div>
             <div class="col-sm-4 resume-contact">
                 <p><i class="fa fa-home fa-lg fa-fw"></i> 5 avenue de Saint-Ouen, 75017 Paris</p>
-                <p><i class="fa fa-laptop fa-lg fa-fw"></i> <a href="http://scheefer.me/cv" target="_blank">scheefer.me/cv</a></p>
+                <p><i class="fa fa-user-circle-o fa-lg fa-fw"></i> <a href="http://scheefer.me/cv" target="_blank">scheefer.me/cv</a></p>
                 <p><i class="fa fa-envelope-o fa-lg fa-fw"></i> <a href="mailto:jerome@scheefer.me" target="_blank">jerome@scheefer.me</a></p>
                 <p><i class="fa fa-mobile fa-lg fa-fw"></i> <a href="tel:+33617564780" target="_blank">06 17 56 47 80</a></p>
+                <p><i class="fa fa-github fa-lg fa-fw"></i> <a href="https://github.com/schouffy" target="_blank">github.com/schouffy</a></p>
+                <p><i class="fa fa-gamepad fa-lg fa-fw"></i> <a href="https://schouffy.itch.io" target="_blank">schouffy.itch.io</a></p>
+                <p><i class="fa fa-tumblr fa-lg fa-fw"></i> <a href="https://thegamedevquest.tumblr.com" target="_blank">thegamedevquest.tumblr.com</a></p>
 
             </div>
         </div>
         <div class="row">
+
+            <div class="col-sm-4">
+                <div class="panel panel-default">
+                    <div class="panel-heading">
+                        <h3 class="panel-title">Gamedev</h3>
+                    </div>
+                    <div class="panel-body">
+
+                        <h4>
+                            Jeu sorti
+                        </h4>
+                        <ul>
+                            <li><a href="https://schouffy.itch.io/jumpy-deer" target="_blank">Jumpy Deer</a> : Jeu mobile. Bondissez et frayez-vous un chemin à travers des niveaux générés procéduralement.</li>
+                        </ul>
+                        <h4>
+                            Challenge 3 mois / 3 jeux
+                        </h4>
+                        <ul>
+                            <li><a href="https://schouffy.itch.io/skyline-rider" target="_blank">Skyline Rider</a>: Platformer 2D. Pour une promesse de récompense, vous acceptez une livraison qui n'a pas l'air sans risque.</li>
+                            <li>Second jeu en cours de réalisation</li>
+                            <li>Troisième jeu... Bientôt :)</li>
+                        </ul>
+                        <p>Participation à plusieurs <a href="https://schouffy.itch.io" target="_blank">game jams</a></p>
+
+                    </div>
+                </div>
+            </div>
 
             <div class="col-sm-4">
                 <div class="panel panel-default">
@@ -434,25 +464,18 @@
 
                                 </td>
                             </tr>
+                            <tr>
+                                <td>Audacity</td>
+                                <td>
+                                    <div class="circle circle-full"></div>
+                                    <div class="circle circle-full"></div>
+                                    <div class="circle circle-empty"></div>
+                                    <div class="circle circle-empty"></div>
+                                    <div class="circle circle-empty"></div>
+
+                                </td>
+                            </tr>
                         </table>
-                    </div>
-                </div>
-            </div>
-
-            <div class="col-sm-4">
-                <div class="panel panel-default">
-                    <div class="panel-heading">
-                        <h3 class="panel-title">Open Source</h3>
-                    </div>
-                    <div class="panel-body">
-                        <p>Quelques-uns de mes projets :</p>
-
-                        <ul>
-                            <li><a href="https://github.com/schouffy/bookmarks-chrome-extension" target="_blank">Bookmarks Chrome extension</a>: Une petite extension Chrome pour gérer les favoris au lieu de la barre de favoris (L'objectif est de libérer de
-                                la place verticalement)</li>
-                            <li><a href="https://github.com/schouffy/DrySafe" target="_blank">DrySafe</a>: Aide à éviter de se faire saucer en vélo en allant au travail</li>
-                        </ul>
-
                     </div>
                 </div>
             </div>
@@ -476,9 +499,8 @@
                         <h4>
                             J'aime quoi ?
                         </h4>
-                        <p>Les jeux vidéo (Dark Souls, Stalker, Hotline Miami,...) et le game dev (Créé un jeu mobile, <a href="https://schouffy.itch.io/jumpy-deer" target="_blank">Jumpy Deer</a>, et participé à plusieurs <a href="https://schouffy.itch.io"
-                                target="_blank">game jams</a>)</p>
-                        <p>Le cinéma (J'ADORE Nolan et Tarantino), Les BD (Garth Ennis FTW), le sport, la rando, voyager (Irlande, Mexique, Islande, Sri Lanka, Ecosse, Californie, Hawaï,...)</p>
+                        <p>Les jeux vidéo (Dark Souls, Stalker, Hotline Miami,...)</p>
+                        <p>Le cinéma (J'ADORE Nolan et Tarantino), Les BD (Garth Ennis FTW), le sport, et notamment le cyclisme, la rando, voyager (Irlande, Mexique, Islande, Sri Lanka, Ecosse, Californie, Hawaï,...)</p>
                     </div>
                 </div>
             </div>
