--- a/resume.html
+++ b/resume.html
@@ -31,18 +31,47 @@
             <div class="col-sm-8 clearfix">
                 <div class="resume-baseinfo">
                     <h1>Jérôme Scheefer</h1>
-                    <p>I'm a fullstack developer with eleven years of experience in frontend and backend development. Mostly on Microsoft technologies but i'm interested in any other as well. I really do love C# though.</p>
+                    <p>I'm a fullstack developer with eleven years of experience in frontend and backend development.<br/>I'm also a hobbyist game developer currently in the process of going pro and looking for a job! You can check some of my work on <a href="https://schouffy.itch.io" target="_blank">itch.io</a> and <a href="https://thegamedevquest.tumblr.com" target="_blank">Tumblr</a>.</p>
                 </div>
             </div>
             <div class="col-sm-4 resume-contact">
                 <p><i class="fa fa-home fa-lg fa-fw"></i> 5 avenue de Saint-Ouen, 75017 Paris</p>
-                <p><i class="fa fa-laptop fa-lg fa-fw"></i> <a href="http://scheefer.me/resume" target="_blank">scheefer.me/resume</a></p>
+                <p><i class="fa fa-user-circle-o fa-lg fa-fw"></i> <a href="http://scheefer.me/resume" target="_blank">scheefer.me/resume</a></p>
                 <p><i class="fa fa-envelope-o fa-lg fa-fw"></i> <a href="mailto:jerome@scheefer.me" target="_blank">jerome@scheefer.me</a></p>
                 <p><i class="fa fa-mobile fa-lg fa-fw"></i> <a href="tel:+33617564780" target="_blank">+33 6 17 56 47 80</a></p>
-
+                <p><i class="fa fa-github fa-lg fa-fw"></i> <a href="https://github.com/schouffy" target="_blank">github.com/schouffy</a></p>
+                <p><i class="fa fa-gamepad fa-lg fa-fw"></i> <a href="https://schouffy.itch.io" target="_blank">schouffy.itch.io</a></p>
+                <p><i class="fa fa-tumblr fa-lg fa-fw"></i> <a href="https://thegamedevquest.tumblr.com" target="_blank">thegamedevquest.tumblr.com</a></p>
             </div>
         </div>
         <div class="row">
+
+            <div class="col-sm-4">
+                <div class="panel panel-default">
+                    <div class="panel-heading">
+                        <h3 class="panel-title">Gamedev</h3>
+                    </div>
+                    <div class="panel-body">
+                        
+                        <h4>
+                            Released
+                        </h4>
+                        <ul>
+                            <li><a href="https://schouffy.itch.io/jumpy-deer" target="_blank">Jumpy Deer</a>: Unity mobile game. Jump your way through procedurally generated levels.</li>
+                        </ul>
+                        <h4>
+                            3 months / 3 games challenge
+                        </h4>
+                        <ul>
+                            <li><a href="https://schouffy.itch.io/skyline-rider" target="_blank">Skyline Rider</a>: Unity 2d platformer. In desperate need of some cash, you take on a delivery that looks anything but safe.</li>
+                            <li>Second game is in the making :)</li>
+                            <li>Third game will start after the second one is complete</li>
+                        </ul>
+                        <p>I also took part in a few <a href="https://schouffy.itch.io" target="_blank">game jams</a></p>
+                        
+                    </div>
+                </div>
+            </div>
 
             <div class="col-sm-4">
                 <div class="panel panel-default">
@@ -415,24 +444,18 @@
 
                                 </td>
                             </tr>
+                            <tr>
+                                <td>Audacity</td>
+                                <td>
+                                    <div class="circle circle-full"></div>
+                                    <div class="circle circle-full"></div>
+                                    <div class="circle circle-empty"></div>
+                                    <div class="circle circle-empty"></div>
+                                    <div class="circle circle-empty"></div>
+
+                                </td>
+                            </tr>
                         </table>
-                    </div>
-                </div>
-            </div>
-
-            <div class="col-sm-4">
-                <div class="panel panel-default">
-                    <div class="panel-heading">
-                        <h3 class="panel-title">Open Source</h3>
-                    </div>
-                    <div class="panel-body">
-                        <p>Here are some of my open source projects:</p>
-
-                        <ul>
-                            <li><a href="https://github.com/schouffy/bookmarks-chrome-extension" target="_blank">Bookmarks Chrome extension</a>: A tiny Chrome extension to manage bookmarks</li>
-                            <li><a href="https://github.com/schouffy/DrySafe" target="_blank">DrySafe</a>: Helps avoiding rain when you bike daily to work</li>
-                        </ul>
-
                     </div>
                 </div>
             </div>
@@ -456,9 +479,8 @@
                         <h4>
                             What drives me
                         </h4>
-                        <p>Video games (Dark Souls, Stalker, Hotline Miami,...) and game dev (Released a mobile game named <a href="https://schouffy.itch.io/jumpy-deer" target="_blank">Jumpy Deer</a>, took part in a few <a href="https://schouffy.itch.io"
-                                target="_blank">game jams</a>)</p>
-                        <p>Cinema (LOVE Nolan and Tarantino), comic books (Garth Ennis FTW), sports, hiking, trips (Ireland, Mexico, Iceland, Sri Lanka, Scotland, California, Hawaï, ...)</p>
+                        <p>Video games (Dark Souls, Stalker, Hotline Miami,...)</p>
+                        <p>Cinema (LOVE Nolan and Tarantino), comic books (Garth Ennis FTW), sports, hiking, cycling, trips (Ireland, Mexico, Iceland, Sri Lanka, Scotland, California, Hawaï, ...)</p>
                     </div>
                 </div>
             </div>
