--- a/cv.html
+++ b/cv.html
@@ -57,6 +57,7 @@
                 <p><i class="fa fa-user-circle-o fa-lg fa-fw"></i> <a href="http://scheefer.me/cv" target="_blank">scheefer.me/cv</a></p>
                 <p><i class="fa fa-envelope-o fa-lg fa-fw"></i> <a href="mailto:jerome@scheefer.me" target="_blank">jerome@scheefer.me</a></p>
                 <p><i class="fa fa-mobile fa-lg fa-fw"></i> <a href="tel:+33617564780" target="_blank">06 17 56 47 80</a></p>
+                <p><i class="fa fa-linkedin fa-lg fa-fw"></i> <a href="https://www.linkedin.com/in/j%C3%A9r%C3%B4me-scheefer-1b77b31aa/" target="_blank">linkedin.com/me</a></p>
                 <p><i class="fa fa-github fa-lg fa-fw"></i> <a href="https://github.com/schouffy" target="_blank">github.com/schouffy</a></p>
                 <p><i class="fa fa-gamepad fa-lg fa-fw"></i> <a href="https://schouffy.itch.io" target="_blank">schouffy.itch.io</a></p>
                 <p><i class="fa fa-tumblr fa-lg fa-fw"></i> <a href="https://thegamedevquest.tumblr.com" target="_blank">thegamedevquest.tumblr.com</a></p>
